tests/valid/reborrow/nested_shared_reborrow.facet
fn nested_shared(mut x: unrestricted isize) -> unrestricted isize {
    let mut r: affine &mut unrestricted isize = (&mut x) in
    let rr: unrestricted &affine &mut unrestricted isize = (&r) in
    let s: unrestricted &unrestricted isize = (&**rr) in
    (*s)
}
