tests/invalid/borrow_error/assign_through_linear_ref.facet
fn bad(mut x: linear isize, y: linear isize) -> unrestricted () {
    let r: affine &mut linear isize = (&mut x) in
    (*r = y)
}
